[gd_scene load_steps=5 format=3 uid="uid://d3xi5i6j22rsg"]

[ext_resource type="Script" path="res://game_ui/game_ui.gd" id="1_16ulh"]
[ext_resource type="PackedScene" uid="uid://bfjl6bjl5sn6a" path="res://game_ui/ui_elements/drag_slot.tscn" id="2_bhf0d"]
[ext_resource type="PackedScene" uid="uid://ctwiav4y6btdj" path="res://game_ui/ui_elements/inventory_window/inventory_window.tscn" id="2_j2som"]
[ext_resource type="PackedScene" uid="uid://qptu0abpwrpe" path="res://game_ui/ui_elements/hotbar.tscn" id="4_203xq"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_16ulh")

[node name="InventoryWindow" parent="." instance=ExtResource("2_j2som")]
layout_mode = 0

[node name="Hotbar" parent="." instance=ExtResource("4_203xq")]
layout_mode = 0
offset_left = 327.0
offset_top = 557.0
offset_right = 391.0
offset_bottom = 621.0

[node name="DragSlot" parent="." instance=ExtResource("2_bhf0d")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
mouse_filter = 2
